
- Also added the ability to use absolute, relative, and union-directory-relative paths for "program" in the "asimstarter program" and "asimstarter -- program" usages.

----------
spartha1    Date: Mon Dec 29 13:18:21 EST 2008  CSN: CSN-asimcore-281
                  Mon Dec 29 18:18:21 UTC 2008


Directory tools/scripts
 asim-run                  Locally Modified          280 

Updating with simcore changes (rev. 2661 - Carl Beckmann)

- Asim-run now recognized both syntaxes:
     -param LIMIT_PTHREADS=4
  and
     -limit_pthreads 4
  when deciding whether to launch a netbatch job as a parallel job.
  Also, fixed a bug in scanning model arguments (previously it was only
  able to detect parallel jobs from parameters in the .apm file)

----------
spartha1    Date: Mon Dec 29 13:21:38 EST 2008  CSN: CSN-asimcore-282
                  Mon Dec 29 18:21:38 UTC 2008


Directory libperl/Asim/lib/Asim
 PlotStats.pm              Locally Modified          281 

Updating with simcore changes (rev. 2673 - Alex Settle)

Fixed perl printfs to prevent them from expanding the '%' character found in many of the benchmark names.  This fix allows plot.nightly to complete without error and mail out a gif image of performance metrics with the nightly regression emails.

----------
spartha1    Date: Mon Dec 29 14:37:17 EST 2008  CSN: CSN-asimcore-283
                  Mon Dec 29 19:37:17 UTC 2008


Directory modules/controller/classic
 args.cpp                  Locally Modified          282 

Updating with simcore changes (rev. 2599 - Carl Beckmann)

- bug fix in relative path name resolution for resursive config files,
  (thanks to James Mason for providing the fix).

----------
mcadler     Date: Wed Mar  4 22:36:28 EST 2009  CSN: CSN-asimcore-284
                  Thu Mar  5 03:36:28 UTC 2009


Directory libperl/Asim/lib/Asim
 Module.pm                 Locally Modified          283 

Treat BSH (Bluespec header) files as a separate class than BSV.